# special_agent_attribute

./: DESCRIPTION  NAMESPACE
R/: benchmark_results.R  extendr-wrappers.R  run_bench.R  utils.R
src/rust/: Cargo.toml
src/rust/src/: lib.rs
tests/testthat/: test-hello.R  test-result_attribute.R  test-result_condition.R  test-result_list.R  test-result_panic.R
